examples/test/testpolicy1961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1961
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key14: value13
      key8: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value9
          key49: value43
      podSelector:
        matchLabels:
          key49: value41
          key16: value13
          key13: value33
